--- a/userbot/pom.xml
+++ b/userbot/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
 
         <!-- Pls dont blame me Arsen -->
         <dependency>
