--- a/userbot/pom.xml
+++ b/userbot/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>unirest-java</artifactId>
             <version>1.4.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-jsr223</artifactId>
+            <version>2.4.7</version>
+        </dependency>
 
         <!-- Pls dont blame me Arsen -->
         <dependency>
